tests/macros/confirm/should_loop.stderr
error: option `should_loop` does not exist for kind `confirm`
 --> $DIR/should_loop.rs:3:9
  |
3 |         should_loop: todo!()
  |         ^^^^^^^^^^^
