tests/macros/confirm/should_loop.rs
fn main() {
    inquisition::questions![confirm {
        should_loop: todo!()
    }];
}
